# qtchat

./: CMakeLists.txt  README.md  global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  res_page.qrc  singleton.h  stylesheet.qss
